--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   </head>
 
   <body>
+    <div id="header">proof of concept by <a href="https://twitter.com/beaugunderson">@beaugunderson</a>; code on <a href="https://github.com/beaugunderson/handshake-domain-finder">github</a></div>
+
     <div>
       regex: <input id="domain-regex" type="text" />
 
@@ -17,13 +19,13 @@
       min cost: <input id="min-cost" type="text" value="" />
     </div>
 
-    <div id="saved-searches">
-      <a href="#">letters only</a>
-      &bullet;
-      <a href="#">numbers only</a>
-      &bullet;
-      <a href="#">english words</a>
-    </div>
+    <!-- <div id="saved-searches"> -->
+    <!--   <a href="#">letters only</a> -->
+    <!--   &bullet; -->
+    <!--   <a href="#">numbers only</a> -->
+    <!--   &bullet; -->
+    <!--   <a href="#">english words</a> -->
+    <!-- </div> -->
 
     <div id="results">loading...</div>
 
