--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
       code on <a href="https://github.com/beaugunderson/handshake-domain-finder">github</a>
     </div>
 
-    <div>
-      regex: <input id="domain-regex" type="text" />
+    <div id="form">
+      <label>regex: <input id="domain-regex" type="text" /></label>
 
-      max cost: <input id="max-cost" type="text" value="" />
+      <label>max cost: <input id="max-cost" type="text" value="" /></label>
 
-      min cost: <input id="min-cost" type="text" value="" />
+      <label>min cost: <input id="min-cost" type="text" value="" /></label>
     </div>
 
     <div id="saved-searches">
