--- a/index.html
+++ b/index.html
@@ -9,9 +9,13 @@
   </head>
 
   <body>
+    <h1><a href="http://domainfindr/">domainfindr/</a></h1>
+
     <div id="header">
-      proof of concept by <a href="https://twitter.com/beaugunderson">@beaugunderson</a>;
-      code on <a href="https://github.com/beaugunderson/handshake-domain-finder">github</a>
+      by <a href="https://twitter.com/beaugunderson">@beaugunderson</a>; code on
+      <a href="https://github.com/beaugunderson/handshake-domain-finder"
+        >github</a
+      >
     </div>
 
     <div id="form">
