add additional improvements

--- a/index.html
+++ b/index.html
@@ -21,9 +21,24 @@
     <div id="form">
       <label>regex: <input id="domain-regex" type="text" /></label>
 
-      <label>max cost: <input id="max-cost" type="text" value="" /></label>
+      <label>max HNS: <input id="max-cost" type="text" value="" /></label>
 
-      <label>min cost: <input id="min-cost" type="text" value="" /></label>
+      <label>min HNS: <input id="min-cost" type="text" value="" /></label>
+
+      <label>min date: <input id="min-date" type="date" value="" /></label>
+
+      <br />
+      <br />
+
+      <label>sort:
+        <select id="sort">
+          <option value="name" selected>a-z</option>
+          <option value="price">price</option>
+          <option value="length">length</option>
+        </select>
+      </label>
+
+      <label>english: <input id="english-only" type="checkbox" /></label>
     </div>
 
     <div id="saved-searches">
